add homepage file

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -35,7 +35,7 @@
           ducimus iusto earum eius repudiandae sapiente perspiciatis rem?
           Facere, nobis? Repellat, doloribus.
         </p>
-        <video src="video.mp4" type="video/mp4">
+        <video controls width="600" src="video.mp4" type="video/mp4">
           Your browser does not support the video tag.
           <track
             kind="captions"
