--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -20,9 +20,7 @@
 
     <main>
       <table>
-        <caption>
-          Detailed Schedule of Events for TechCon 2024
-        </caption>
+        <caption>Detailed Schedule of Events for TechCon 2024</caption>
           <tr>
             <th scope="col">Time</th>
             <th scope="col">Session</th>
