add contact page

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -21,7 +21,7 @@
     <main>
       <section id="contact-details">
         <h2>You can get in touch with us via</h2>
-        <p>Email Address: <a href="mailto:example.com">email us</a></p>
+        <p>Email Address: <a href="mailto:email@example.com">email us</a></p>
 
         <h3>Follow Us On</h3>
         <ul>
